--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,14 +55,14 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Bienbenido a Virtualbank</h1>
-        <p>la facilidad de un banco en la nube</p>
+        <h1>Bienvenido a Virtualbank</h1>
+        <p>La facilidad de un banco en la nube</p>
       </div>
     </div>
       <hr>
 
       <footer>
-        <p>&copy;Proyecto arem tercer corte 2013 </p>
+        <p>&copy;Proyecto arem tercer corte 2018 </p>
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
