prueba nada mas

--- a/views/pages/activities.ejs
+++ b/views/pages/activities.ejs
@@ -46,7 +46,7 @@
             <div class="form-group">
               <input type="password" placeholder="Pass" class="form-control">
             </div>
-            <button type="submit" class="btn btn-success"  href="activities.ejs" >Sign in</button>
+            <button type="submit" class="btn btn-success">Sign in</button>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
@@ -55,8 +55,8 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Bienvenido a Virtualbank</h1>
-        <p>La facilidad de un banco en la nube</p>
+        <h1>Inicio de Virtualbank</h1>
+        <p>Prueba transaccion</p>
       </div>
     </div>
       <hr>
