--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -46,7 +46,7 @@
             <div class="form-group">
               <input type="password" placeholder="Pass" class="form-control">
             </div>
-            <button type="submit" class="btn btn-success"  href="activities.ejs" >Sign in</button>
+            <button type="submit" class="btn btn-success" onclick="location.href='https://www.facebook.com'" >Sign in</button>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
