--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -46,7 +46,7 @@
             <div class="form-group">
               <input type="password" placeholder="Pass" class="form-control">
             </div>
-            <button type="submit" class="btn btn-success" onclick="location.href='https://www.facebook.com'" >Sign in</button>
+            <button type="submit" class="btn btn-success">Sign in</button>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
@@ -56,6 +56,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Bienvenido a Virtualbank</h1>
+        <button type="submit" href="activities.ejs">prueba</button>
         <p>La facilidad de un banco en la nube</p>
       </div>
     </div>
