--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -56,7 +56,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Bienvenido a Virtualbank</h1>
-        <button type="submit" href="activities.ejs">prueba</button>
+        <button type="submit" href="activities.ejs" class="btn btn-success" >prueba</button>
         <p>La facilidad de un banco en la nube</p>
       </div>
     </div>
