--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -26,7 +26,7 @@
     <body>
     <script>
         function redireccionar(){
-            document.location.href="css/activities.ejs";
+            document.location.href="views/pages/activities.ejs";
         }
     </script>
         <!--[if lt IE 8]>
