--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -24,15 +24,10 @@
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
-    <script>
-        function redireccionar(){
-            document.location.href="views/pages/activities.ejs";
-        }
-    </script>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-dark bg-dark" role="navigation">
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd;" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -61,8 +56,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Bienvenido a Virtualbank</h1>
-        <button type="submit" onclick="redireccionar()" class="btn btn-success" >prueba</button>
-        <p>La facilidad de un banco en la nube</p>
+        <button type="submit"  class="btn btn-success" >prueba</button>
+        <p>La facilidad de un banco en la nube.</p>
       </div>
     </div>
       <hr>
