prueba color e interfaz

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,7 +27,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-light" style="background-color: #e3f2fd;" role="navigation">
+    <nav class="navbar navbar-light" style="background-color: #A93226;" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -57,16 +57,15 @@
       <div class="container">
         <h1>Bienvenido a Virtualbank</h1>
         <p></p>
-        <button type="submit"  class="btn btn-success" >prueba</button>
         <p></p>
         <p></p>
-        <p>La facilidad de un banco en la nube.</p>
+        <p>La facilidad de un banco en la nube en tus manos.</p>
       </div>
     </div>
       <hr>
 
       <footer>
-        <p>&copy;Proyecto arem tercer corte 2018 </p>
+        <!--<p>&copy;Proyecto arem tercer corte 2018 </p> -->
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
