--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="prueba.html"color="#EAEDED" >Welcome</a>
+          <a class="navbar-brand" >Welcome</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -46,7 +46,8 @@
             <div class="form-group">
               <input type="password" placeholder="Pass" class="form-control">
             </div>
-            <button type="submit" class="btn btn-success">Sign In</button>
+            <!--<button type="submit" class="btn btn-success">Sign In</button>-->
+            <button type="submit" href="prueba.html" >Sign In</button>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
