--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,37 +27,14 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-light" style="background-color: #e3f2fd;" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="prueba.html">Wellcome</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Usuario" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Pass" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">SignIn</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+    
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Bienvenido a Virtualbank</h1>
+        <center><h1>Registro fallido</h1><center>
         <button type="submit"  class="btn btn-success" >prueba</button>
-        <p>La facilidad de un banco en la nube.</p>
+        <p>Estas en una lista negra o tienes malos antecedentes en tu historial de créditos.</p>
       </div>
     </div>
       <hr>
