--- a/public/views/pages/index.ejs
+++ b/public/views/pages/index.ejs
@@ -103,4 +103,28 @@
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
     </body>
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="prueba.html">Wellcome</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right" role="form">
+            <div class="form-group">
+              <input type="text" placeholder="Usuario" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Pass" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success"  href="activities.html">SignIn</button>
+          </form>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
 </html>
