--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -33,9 +33,8 @@
     <div class="jumbotron">
       <div class="container">
         <center><h1>Registro fallido</h1><center>
-        <button type="submit"  class="btn btn-success" >prueba</button>
         <p>Estas en una lista negra o tienes malos antecedentes en tu historial de créditos.</p>
-       
+        <button type="submit"  class="btn btn-success" href="http://aremprueba.s3-website.us-east-2.amazonaws.com/options.html">volver</button>
 
       </div>
     </div>
